<resources>
    <string name="app_name">My app</string>
    <string name="butt_signin">Sign In</string>
    <string name="butt_signup">Sign Up</string>
    <string name="butt_entry">Entry</string>
    <string name="butt_next">Next</string>
    <string name="butt_prev">Prev</string>
    <string name="radio_student">Student</string>
    <string name="radio_listener">Listener</string>
    <string name="radio_manager">Manager</string>
    <string name="date_birthday">Birthday</string>
    <string name="text_addr">Address</string>
    <string name="butt_save">Save</string>
    <string name="text_name">Name</string>
    <string name="text_surname">Surname</string>
    <string name="text_role">Role</string>
    <string name="text_age">Age</string>
    <string name="text_manager">Manager</string>
    <string name="text_organization">Organization</string>
    <string name="text_staff">Staff</string>
    <string name="text_mark">Mark</string>
    <string name="text__rating">Rating</string>
    <string name="text_net">.NET</string>
    <string name="text_java">JAVA</string>
    <string name="text_generate_from_file">Generate from file</string>
    <string name="text_random_generate">Random generate</string>
    <string name="text_go_to_staff">Go to staff</string>
    <string name="text_staff_info">Staff info</string>
    <string name="text_top_people">Top 3</string>
    <string name="text_sort_by_rating">Sort by rating</string>
    <string name="text_phone">Phone</string>
    <string name="text_email">Email</string>
    <string name="text_messangers">Messangers</string>
    <string name="text_clickme">ClickMe</string>
    <string name="text_new">New</string>
    <string name="text_find">Find</string>
    <string name="top_3">Top 3</string>
    <string name="input_here">Input here:</string>
    <string name="delete">Delete</string>
    <string name="copy">Copy</string>
    <string-array name="orgs">
        <item>BSU</item>
        <item>BSTU</item>
        <item>BSUIR</item>
    </string-array>
    <string-array name="staff">
        <item>.Net</item>
        <item>JAVA</item>
    </string-array>
</resources>
