<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registration.reg_anotherinformation">

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="100dp"
        android:onClick="onClickSave"
        android:text="@string/butt_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toBottomOf="@+id/edit_birthday" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:onClick="onClickPrev"
        android:text="@string/butt_prev"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_birthday" />

    <TextView
        android:id="@+id/prev_info"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:enabled="false"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_addr"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:autofillHints="true"
        android:ems="10"
        android:hint="@string/text_addr"
        android:inputType="textPostalAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prev_info" />

    <DatePicker
        android:id="@+id/edit_birthday"
        android:layout_width="351dp"
        android:layout_height="440dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_addr" />
</androidx.constraintlayout.widget.ConstraintLayout>